--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,25 @@
 * {
     box-sizing: border-box;
+    font-family: Helvetica;
     margin: 0;
     padding: 0;
 }
-
 @media(min-width:992px) {
     .col-lg-4 {
         width: 33.33%;
+    }
+}
+@media(min-width:768px) and (max-width:991px) {
+    .col-md-6 {
+        width: 50%;
+    }
+    .col-md-12 {
+        width: 100%;
+    }
+}
+@media(max-width:767px) {
+    .col-sm-12 {
+        width: 100%;
     }
 }
 
@@ -14,17 +27,27 @@
     width: 100%;
 }
 
+h1{
+    margin: 20px;
+    text-align: center;
+}
 .content {
     border: 1px solid black;
-    background-color: #A52A2A;
-    width: 90%;
+    background-color: gray;
+    padding: 40px 10px 10px 10px;
     height: 150px;
-    margin: auto;
-
-    font-family: Helvetica;
+    margin: 10px;
+    margin-bottom: 10px;
+    position: relative;
 }
-
-section {
+.title{
+    position: absolute;
+    top: 0px;
+    right: 0px;
     border: 1px solid black;
+    padding: 5px;
+    display: inline-block;
+}
+section {
     float: left;
 }
