--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: Helvetica;
+    font-family: helvetica;
     margin: 0;
     padding: 0;
 }
@@ -28,7 +28,7 @@
 }
 
 h1{
-    margin: 20px;
+    margin: 30px;
     text-align: center;
 }
 .content {
