--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,13 @@
 h1{
     margin: 30px;
     text-align: center;
+    font-size: 175%;
 }
 .content {
     border: 1px solid black;
     background-color: gray;
     padding: 40px 10px 10px 10px;
-    height: 150px;
+    /* height: 150px; */
     margin: 10px;
     margin-bottom: 10px;
     position: relative;
@@ -47,6 +48,7 @@ h1{
     border: 1px solid black;
     padding: 5px;
     display: inline-block;
+    font-size: 125%;
 }
 section {
     float: left;
